--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="schedule_time">10:00</string>
     <string name="distributor">宝鐘マリン</string>
-    <string name="broadcast_title">[放送タイトル]内容は未定ペコ</string>
+    <string name="broadcast_title">[放送タイトル]内容は未定ペコ\nてすと</string>
     <string name="broadcast_status">配信中</string>
 
 <!-- TODO: Remove or change this placeholder text -->
