アプリ名を変更

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">HoloDule</string>
+    <string name="app_name">774ist(仮)</string>
     <string name="title">配信予定</string>
 
     <string name="schedule_time">10:00</string>
